Done blocks sGoalsPriorities

--- a/public/07.html
+++ b/public/07.html
@@ -113,7 +113,7 @@
 						</div>
 						<div class="card-item__body">
 							<div class="card-item__line">
-								<div class="row">
+								<div class="row align-items-center">
 									<div class="col">
 										<p>Наличие раздела и&nbsp;актуальной информации о&nbsp;национальных целях и&nbsp;приоритетах (ссылка на&nbsp;раздел)</p>
 									</div>
@@ -127,7 +127,7 @@
 						</div>
 						<div class="card-item__footer">
 							<div class="card-item__input-wrap form-group">
-								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="" name="textarea"></textarea>
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
@@ -141,10 +141,22 @@
 							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
 						</div>
 						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество опубликованных&nbsp;постов (данные&nbsp;из&nbsp;отчета Росмолодежи)</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="card-item__footer">
 							<div class="card-item__input-wrap form-group">
-								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="" name="textarea"></textarea>
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
@@ -159,7 +171,7 @@
 						</div>
 						<div class="card-item__body">
 							<div class="card-item__line">
-								<div class="row">
+								<div class="row align-items-center">
 									<div class="col">
 										<p>Проведение регионального этапа</p>
 									</div>
@@ -173,7 +185,7 @@
 						</div>
 						<div class="card-item__footer">
 							<div class="card-item__input-wrap form-group">
-								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="" name="textarea"></textarea>
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
@@ -187,10 +199,322 @@
 							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
 						</div>
 						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Рекомендованное количество&nbsp;участников от&nbsp;региона на мероприятии</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих&nbsp;волонтеров на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="card-item__footer">
 							<div class="card-item__input-wrap form-group">
-								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="" name="textarea"></textarea>
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
+								</label>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="card-item">
+						<div class="card-item__head">
+							<div class="card-item__number text-success">1.5
+							</div>
+							<div class="h3 strong">Фестиваль творческих сообществ «Таврида – АРТ»</div>
+							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
+						</div>
+						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Рекомендованное количество&nbsp;участников от&nbsp;региона на мероприятии</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих&nbsp;волонтеров на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="card-item__footer">
+							<div class="card-item__input-wrap form-group">
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
+								</label>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="card-item">
+						<div class="card-item__head">
+							<div class="card-item__number text-success">1.6
+							</div>
+							<div class="h3 strong">Итоговое событие  в рамках реализации проекта «Национальная лига студенческих клубов»</div>
+							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
+						</div>
+						<div class="card-item__body">
+							<h4 class="card-item__points">Региональное мероприятие НЛСК
+							</h4>
+							<div class="card-item__footer textarea-comment">
+								<div class="card-item__input-wrap form-group">
+									<label class="w-100 d-block"><span class="card-item__title">Проведение мероприятия</span><textarea class="card-item__input form-control" placeholder="ссылки на соц. сети и СМИ" name="textarea"></textarea>
+									</label>
+								</div>
+								<!-- +e.input-wrap-->
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество участников мероприятия</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<h4 class="card-item__points">Всероссийское мероприятие 
+							</h4>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество участников мероприятия</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Рекомендованное количество участвующих от региона на&nbsp;мероприятии</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="card-item__footer">
+							<div class="card-item__input-wrap form-group">
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
+								</label>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="card-item">
+						<div class="card-item__head">
+							<div class="card-item__number text-success">1.7
+							</div>
+							<div class="h3 strong">Региональные встречи в рамках проекта «Диалог на равных»</div>
+							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
+						</div>
+						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество мероприятий согласно&nbsp;утвержденному&nbsp;плану</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество студентов согласно&nbsp;утвержденному&nbsp;плану</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество трансляций согласно&nbsp;утвержденному&nbsp;плану</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество видео согласно&nbsp;утвержденному&nbsp;плану</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Id мероприятия в&nbsp;АИС «Молодежь&nbsp;России»</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="card-item__footer">
+							<div class="card-item__input-wrap form-group">
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
+								</label>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="card-item">
+						<div class="card-item__head">
+							<div class="card-item__number text-success">1.8
+							</div>
+							<div class="h3 strong">Окружные форумы добровольцев (online)</div>
+							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
+						</div>
+						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Рекомендованное количество&nbsp;участников от&nbsp;региона на мероприятии</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="card-item__footer">
+							<div class="card-item__input-wrap form-group">
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
+								</label>
+							</div>
+							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="card-item">
+						<div class="card-item__head">
+							<div class="card-item__number text-success">1.9
+							</div>
+							<div class="h3 strong">Международный форум добровольцев</div>
+							<p>Ответственные: <strong>Росмолодежь; Управление молодежных проектов и программ</strong></p>
+						</div>
+						<div class="card-item__body">
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Рекомендованное количество&nbsp;участников от&nbsp;региона на мероприятии</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Количество присутствующих на&nbsp;форуме</p>
+									</div>
+									<div class="card-item__input-col col-sm-auto">
+										<div class="card-item__input-wrap form-group"><input class="card-item__input form-control text-right" type="text" placeholder="0" name="text"/>
+										</div>
+										<!-- +e.input-wrap-->
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="card-item__footer">
+							<div class="card-item__input-wrap form-group">
+								<label class="w-100 d-block"><span class="card-item__title">Комментарий администратора</span><textarea class="card-item__input form-control" placeholder="0" name="textarea"></textarea>
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
