--- a/public/07.html
+++ b/public/07.html
@@ -182,6 +182,30 @@
 									</div>
 								</div>
 							</div>
+							<div class="card-item__line"> 
+								<div class="row align-items-center">
+									<div class="col">
+										<p>Субъект финалист </p>
+									</div>
+									<div class="col-sm-auto">
+										<label class="yesno">
+											<input type="checkbox"/><span class="yesno__text"> Да</span><span class="yesno__text">Нет</span>
+										</label>
+									</div>
+								</div>
+							</div>
+							<div class="card-item__line">
+								<div class="row align-items-center">
+									<div class="col">
+										<p> </p>
+									</div>
+									<div class="col-sm-auto">
+										<label class="yesno">
+											<input type="checkbox"/><span class="yesno__text"> Да</span><span class="yesno__text">Нет</span>
+										</label>
+									</div>
+								</div>
+							</div>
 						</div>
 						<div class="card-item__footer">
 							<div class="card-item__input-wrap form-group">
@@ -518,6 +542,14 @@
 								</label>
 							</div>
 							<!-- +e.input-wrap-->
+						</div>
+					</div>
+					<div class="sGoalsPriorities__btn-wrap">
+						<div class="row justify-content-between">
+							<div class="col-2"><a class="sGoalsPriorities__btn btn btn-outline-success">Назад</a>
+							</div>
+							<div class="col-2"><a class="sGoalsPriorities__btn btn btn-success">Далее</a>
+							</div>
 						</div>
 					</div>
 				</div>
