--- a/public/07.html
+++ b/public/07.html
@@ -546,9 +546,9 @@
 					</div>
 					<div class="sGoalsPriorities__btn-wrap">
 						<div class="row justify-content-between">
-							<div class="col-3"> <a class="sGoalsPriorities__btn btn btn-outline-success">Назад</a>
+							<div class="col"><a class="sGoalsPriorities__btn btn btn-outline-success">Назад</a>
 							</div>
-							<div class="col-3"><a class="sGoalsPriorities__btn btn btn-success">Далее</a>
+							<div class="col-auto"><a class="sGoalsPriorities__btn btn btn-success">Далее</a>
 							</div>
 						</div>
 					</div>
