--- a/public/index.html
+++ b/public/index.html
@@ -23,38 +23,31 @@
 		<link rel="stylesheet" href="libs/@fancyapps/fancybox/jquery.fancybox.min.css"/>
 		<link rel="stylesheet" href="css/main.min.css"/>
 	</head>
-	<body class="bg-success">
+	<body class="bg-success bg-success-new">
 		<!-- start topLine-->
 		<div class="topLine" id="topLine">
 			<div class="container-fluid">
 				<div class="row">
-					<div class="col">
-						<svg width="154" height="56" viewBox="0 0 154 56" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="2" y="11" width="148" height="37">
-								<path d="M21.9147 48H2.74581V11.7346H21.1375C24.5223 11.7346 27.2854 12.529 29.4268 14.1178C31.6027 15.672 32.6907 17.9688 32.6907 21.0082C32.6907 22.7697 32.2071 24.2375 31.24 25.4118C30.2384 26.6207 29.2713 27.4496 28.3388 27.8986C29.9276 28.2095 31.4645 29.2456 32.9497 31.0071C34.4694 32.734 35.2292 34.8927 35.2292 37.483C35.2292 40.626 34.0031 43.1646 31.5509 45.0988C29.0987 47.0329 25.8866 48 21.9147 48ZM13.8845 33.0276V39.0373H19.7387C20.7403 39.0373 21.5347 38.7782 22.1219 38.2602C22.7436 37.7075 23.0544 36.9822 23.0544 36.0842C23.0544 35.1862 22.7436 34.4609 22.1219 33.9083C21.5002 33.3212 20.7058 33.0276 19.7387 33.0276H13.8845ZM13.8845 20.3865V25.2564H19.5315C20.2913 25.2564 20.913 25.0319 21.3966 24.5829C21.9147 24.1339 22.1737 23.5813 22.1737 22.9251C22.1737 22.1652 21.9147 21.5608 21.3966 21.1118C20.913 20.6283 20.2913 20.3865 19.5315 20.3865H13.8845ZM56.4263 48H45.2876V11.7346H56.4263V48ZM92.5427 33.8047L103.371 48H90.3668L80.7305 35.0481H79.1763V48H68.0377V11.7346H85.5487C89.6933 11.7346 92.9917 12.8398 95.4439 15.0503C97.9307 17.2262 99.1741 20.0066 99.1741 23.3913C99.1741 25.6709 98.5869 27.7259 97.4126 29.5565C96.2383 31.3525 94.615 32.7685 92.5427 33.8047ZM79.1763 26.9143H84.2535C85.2896 26.9143 86.1185 26.6552 86.7402 26.1372C87.3965 25.5845 87.7246 24.8592 87.7246 23.9612C87.7246 23.0632 87.3965 22.3552 86.7402 21.8371C86.1185 21.319 85.2896 21.06 84.2535 21.06H79.1763V26.9143ZM122.312 48H111.536V11.7346H122.571L130.498 24.6347L138.476 11.7346H149.459V48H138.787V27.6914L133.658 36.3433H127.648L122.312 27.6914V48Z" fill="#2E2F33"></path>
-							</mask>
-							<g mask="url(#mask0)">
-								<circle cx="83.4595" cy="23.9907" r="6.12958" stroke="white" stroke-width="2.80042"></circle>
-								<path d="M109.472 24.1083C109.472 38.8176 97.8149 50.689 83.4996 50.689C69.1843 50.689 57.5272 38.8176 57.5272 24.1083C57.5272 9.39906 69.1843 -2.47235 83.4996 -2.47235C97.8149 -2.47235 109.472 9.39906 109.472 24.1083Z" stroke="white" stroke-width="2.80042"></path>
-								<path d="M114.339 24.1084C114.339 41.5008 100.508 55.5553 83.5006 55.5553C66.4934 55.5553 52.6619 41.5008 52.6619 24.1084C52.6619 6.71592 66.4934 -7.33856 83.5006 -7.33856C100.508 -7.33856 114.339 6.71592 114.339 24.1084Z" stroke="white" stroke-width="2.80042"></path>
-								<path d="M104.605 24.1083C104.605 36.1363 95.1202 45.8227 83.4986 45.8227C71.8769 45.8227 62.3924 36.1363 62.3924 24.1083C62.3924 12.0803 71.8769 2.39386 83.4986 2.39386C95.1202 2.39386 104.605 12.0803 104.605 24.1083Z" stroke="white" stroke-width="2.80042"></path>
-								<path d="M99.7414 24.1083C99.7414 33.4584 92.4261 40.9565 83.5015 40.9565C74.5768 40.9565 67.2615 33.4584 67.2615 24.1083C67.2615 14.7581 74.5768 7.26007 83.5015 7.26007C92.4261 7.26007 99.7414 14.7581 99.7414 24.1083Z" stroke="white" stroke-width="2.80042"></path>
-								<path d="M94.8741 24.1082C94.8741 30.7878 89.7213 36.0902 83.5004 36.0902C77.2796 36.0902 72.1268 30.7878 72.1268 24.1082C72.1268 17.4287 77.2796 12.1263 83.5004 12.1263C89.7213 12.1263 94.8741 17.4287 94.8741 24.1082Z" stroke="white" stroke-width="2.80042"></path>
-								<circle cx="83.4987" cy="23.5002" r="50.3036" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4998" cy="23.4998" r="55.1699" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4988" cy="23.4998" r="60.0361" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4998" cy="23.5003" r="64.9023" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.5008" cy="23.4998" r="69.7686" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4999" cy="23.5004" r="74.6348" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4989" cy="23.4999" r="79.5011" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4999" cy="23.4999" r="84.3673" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.499" cy="23.5" r="89.2336" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.5" cy="23.5" r="94.0998" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.5006" cy="23.5001" r="40.5711" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.5016" cy="23.4997" r="45.4374" stroke="white" stroke-width="2.80042"></circle>
-								<circle cx="83.4996" cy="23.5001" r="35.7049" stroke="white" stroke-width="2.80042"></circle>
-							</g>
-						</svg>
+					<div class="col"><svg width="144" height="21" viewBox="0 0 144 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+<g clip-path="url(#clip0_2471_587)">
+<path d="M5.69059 3.66846C8.78355 3.66846 11.2681 6.02675 11.2681 9.22354C11.2681 12.3679 8.73285 14.7786 5.84271 14.7786C4.47369 14.7786 3.15538 14.3594 2.192 13.2064H2.09059V21.277H0.0117188V10.062C0.0117188 6.18397 2.192 3.66846 5.69059 3.66846ZM5.63989 12.892C7.66806 12.892 9.08778 11.215 9.08778 9.17113C9.08778 7.17969 7.71876 5.50268 5.63989 5.50268C3.56102 5.50268 2.1413 7.12728 2.1413 9.17113C2.1413 11.215 3.61172 12.892 5.63989 12.892Z" fill="#DAEF14"/>
+<path d="M13.1953 9.22354C13.1953 6.02675 15.7812 3.66846 18.8235 3.66846C21.8657 3.66846 24.4516 6.02675 24.4516 9.22354C24.4516 12.4203 21.8657 14.7786 18.8235 14.7786C15.7812 14.7786 13.1953 12.4203 13.1953 9.22354ZM18.8235 12.892C20.9024 12.892 22.2714 11.2674 22.2714 9.22354C22.2714 7.17969 20.8516 5.55509 18.8235 5.55509C16.7953 5.55509 15.3756 7.17969 15.3756 9.22354C15.3756 11.2674 16.7446 12.892 18.8235 12.892Z" fill="#DAEF14"/>
+<path d="M32.0578 14.7786C28.8127 14.7786 26.3789 12.4203 26.3789 9.22354C26.3789 6.02675 28.762 3.66846 32.0071 3.66846C34.4916 3.66846 36.7733 5.03102 37.3817 7.70375H35.2521C34.7451 6.28878 33.4775 5.55509 32.0578 5.55509C29.8775 5.55509 28.5592 7.23209 28.5592 9.27594C28.5592 11.3198 29.9282 12.9444 32.1085 12.9444C33.5282 12.9444 34.7958 12.2631 35.3028 10.7433H37.4324C36.6719 13.4685 34.4409 14.7786 32.0578 14.7786Z" fill="#DAEF14"/>
+<path d="M45.0875 13.2587L41.6903 5.92178H41.6396V14.5688H39.6621V3.87793H42.8058L46.1523 11.1624H46.203L49.5494 3.87793H52.6931V14.5164H50.7156V5.92178H50.6649L47.2677 13.2587H45.0875Z" fill="#DAEF14"/>
+<path d="M54.9238 9.22354C54.9238 6.02675 57.5097 3.66846 60.552 3.66846C63.5942 3.66846 66.1802 6.02675 66.1802 9.22354C66.1802 12.4203 63.5942 14.7786 60.552 14.7786C57.5097 14.7786 54.9238 12.4203 54.9238 9.22354ZM60.6027 12.892C62.6816 12.892 64.0506 11.2674 64.0506 9.22354C64.0506 7.17969 62.6309 5.55509 60.6027 5.55509C58.5238 5.55509 57.1548 7.17969 57.1548 9.22354C57.1041 11.2674 58.5238 12.892 60.6027 12.892Z" fill="#DAEF14"/>
+<path d="M67.2461 14.6214V12.4203H67.2968C67.7024 12.4203 68.1588 12.2631 68.463 11.8963C68.8686 11.477 69.0207 10.6385 69.2236 9.48558L69.5278 7.75616C69.8827 5.81713 70.5419 3.82568 73.3813 3.82568H77.3869V14.5166H75.3081V5.81713H73.6855C72.063 5.81713 71.7588 6.28878 71.3531 8.54226L71.0996 10.1145C70.8461 11.5818 70.4912 12.8396 69.7813 13.6257C69.2236 14.2546 68.463 14.569 67.3982 14.569H67.2461V14.6214Z" fill="#DAEF14"/>
+<path d="M79.7188 9.22354C79.7188 6.02675 82.3047 3.66846 85.3469 3.66846C88.3892 3.66846 90.9751 6.02675 90.9751 9.22354C90.9751 12.4203 88.3892 14.7786 85.3469 14.7786C82.3047 14.7786 79.7188 12.4203 79.7188 9.22354ZM85.3469 12.892C87.4258 12.892 88.7948 11.2674 88.7948 9.22354C88.7948 7.17969 87.3751 5.55509 85.3469 5.55509C83.2681 5.55509 81.899 7.17969 81.899 9.22354C81.899 11.2674 83.3188 12.892 85.3469 12.892Z" fill="#DAEF14"/>
+<path d="M93.4091 17.1369H91.4316V12.5776H92.7499C93.3584 11.8963 93.6626 10.8481 93.9161 9.6428L94.3725 7.65135C94.7781 5.76472 95.5894 3.82568 98.1246 3.82568H102.13V12.5776H103.601V17.1369H101.623V14.569H93.3584V17.1369H93.4091ZM100.102 12.63V5.81713H98.1753C96.9077 5.81713 96.5021 6.86526 96.2485 7.96579L95.7922 10.0096C95.5387 11.1626 95.1838 12.1059 94.7781 12.4727V12.63H100.102Z" fill="#DAEF14"/>
+<path d="M110.8 14.7786C107.504 14.7786 105.121 12.4203 105.121 9.22353C105.121 6.02674 107.504 3.66845 110.699 3.66845C113.183 3.66845 116.124 5.34546 116.124 9.38075V9.8H107.149C107.352 11.5818 108.721 12.892 110.749 12.892C111.966 12.892 113.386 12.4203 113.792 11.3722H115.921C115.313 13.7305 112.93 14.7786 110.8 14.7786ZM107.251 0H109.38V2.20107H107.251V0ZM114.045 8.1754C113.741 6.5508 112.524 5.50267 110.699 5.50267C108.924 5.50267 107.656 6.65562 107.301 8.1754H114.045ZM111.865 0H113.994V2.20107H111.865V0Z" fill="#DAEF14"/>
+<path d="M125.911 3.87793V8.12285H127.635L130.068 3.87793H132.35L129.308 8.96135L132.553 14.5164H130.221L127.635 10.0095H125.86V14.5164H123.933V10.0095H122.209L119.623 14.5164H117.291L120.536 8.96135L117.494 3.87793H119.776L122.209 8.12285H123.933V3.87793H125.911Z" fill="#DAEF14"/>
+<path d="M134.023 9.74745L133.973 3.87793H136.052V6.9175H136.102C136.964 5.81697 138.08 5.2929 139.398 5.2929C141.933 5.2929 143.961 7.23194 143.961 9.95708C143.961 12.7346 141.883 14.7785 138.992 14.7785C136.153 14.7785 134.023 12.6822 134.023 9.74745ZM138.992 12.8918C140.615 12.8918 141.832 11.6865 141.832 10.0619C141.832 8.43729 140.615 7.17953 138.992 7.17953C137.37 7.17953 136.204 8.38488 136.204 10.0619C136.204 11.7389 137.37 12.8918 138.992 12.8918Z" fill="#DAEF14"/>
+</g>
+<defs>
+<clipPath id="clip0_2471_587">
+<rect width="144" height="21" fill="white"/>
+</clipPath>
+</defs>
+</svg>
 					</div>
 				</div>
 			</div>
@@ -63,37 +56,41 @@
 		<!-- start sStartSection-->
 		<main class="sStartSection section" id="sStartSection" role="main"> 
 			<div class="container"> 
-				<div class="row">
-					<div class="sStartSection__col col d-flex flex-column">
-						<div class="sStartSection__text-block text-white mb-auto">
-							<h1 class="strong">Форма M1</h1>
-							<p>Форма федерального статистического наблюдения N&nbsp;1-молодежь &laquo;Сведения о&nbsp;сфере государственной молодежной политики&raquo;</p>
+				<div class="sStartSection__col">
+					<div class="form-wrap tabs">
+						<div class="tabs__caption">
+							<div class="tabs__btn active">Вход для сотрудника</div>
+							<div class="tabs__btn">Вход для организации</div>
 						</div>
-						<div><img src="img/svg/logo-text.svg" loading="lazy" alt=""/></div>
-					</div>
-					<div class="sStartSection__col col-md-auto">
-						<div class="form-wrap">
-							<form>
-								<input type="hidden" name="example-input-field"/>
-								<input class="order" type="hidden" name="order" value="Заявка  с сайта"/>
-								<input class="utm_source" type="hidden" name="utm_source"/>
-								<input class="utm_term" type="hidden" name="utm_term"/>
-								<input class="utm_medium" type="hidden" name="utm_medium"/>
-								<input class="utm_campaign" type="hidden" name="utm_campaign"/>
-								<div class="form-wrap__body">
-									<div class="h3 strong pb-2">Вход в&nbsp;систему</div>
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" type="text" placeholder="Логин" name="text"/>
+						<div class="tabs__wrap">
+							<div class="tabs__content active"> 
+								<form id="w0" action="/site/org-login" method="post">
+									<input name="_csrf" type="hidden" value="1ijJa7VsTa4crdIj1dozF0qaiDW9Rlucvzl6aDyuIEjlX6wg7zV62XHF5GCarwt-BcjwQ-0OAv_UVz4GX8BYDQ==" wfd-id="id0"/>
+									<div class="form-group field-employerloginform-email required has-error">
+										<input class="form-control" id="employerloginform-email" name="EmployerLoginForm[email]" type="text" aria-invalid="true" aria-required="true" wfd-id="id1" placeholder="E-mail"/>
+										<div class="help-block">Значение «E-mail» не является правильным email адресом. </div>
 									</div>
-									<!-- +e.input-wrap-->
-									<div class="form-wrap__input-wrap form-group"><input class="form-wrap__input form-control" type="text" placeholder="Пароль" name="text"/>
+									<div class="form-group field-employerloginform-password required">
+										<input class="form-control" id="employerloginform-password" name="EmployerLoginForm[password]" type="text" aria-required="true" wfd-id="id2" placeholder="Пароль"/>
+										<div class="help-block"> </div>
 									</div>
-									<!-- +e.input-wrap-->
-									<button class="form-wrap__btn btn-success" type="submit">Войти
-									</button>
-								</div>
-								<div class="form-wrap__footer small"><a class="strong text-body" href="#">Не знаете как войти?</a> Получите данные у администратора системы
-								</div>
-							</form>
+									<button class="form-wrap__btn btn-success" type="submit">Войти</button>
+								</form>
+							</div>
+							<div class="tabs__content">
+								<form id="w1" action="/site/org-login" method="post">
+									<input name="_csrf" type="hidden" value="1ijJa7VsTa4crdIj1dozF0qaiDW9Rlucvzl6aDyuIEjlX6wg7zV62XHF5GCarwt-BcjwQ-0OAv_UVz4GX8BYDQ==" wfd-id="id3"/>
+									<div class="form-group field-organizationloginform-inn required"> 
+										<input class="form-control" id="organizationloginform-inn" name="OrganizationLoginForm[inn]" type="text" aria-required="true" wfd-id="id4" placeholder="ИНН"/>
+										<div class="help-block"></div>
+									</div>
+									<div class="form-group field-organizationloginform-password required"> 
+										<input class="form-control" id="organizationloginform-password" name="OrganizationLoginForm[password]" type="text" aria-required="true" wfd-id="id5" placeholder="Пароль"/>
+										<div class="help-block"> </div>
+									</div>
+									<button class="form-wrap__btn btn-success" type="submit">Войти</button>
+								</form>
+							</div>
 						</div>
 					</div>
 				</div>
